--- a/package.json
+++ b/package.json
@@ -3,17 +3,45 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
+    "@popperjs/core": "^2.4.0",
+    "@projectstorm/react-canvas-core": "^6.0.1-beta.7",
+    "@projectstorm/react-diagrams": "^6.0.1-beta.7",
+    "@projectstorm/react-diagrams-core": "^6.0.1-beta.7",
+    "@projectstorm/react-diagrams-defaults": "^6.0.1-beta.7",
+    "@projectstorm/react-diagrams-routing": "^6.0.1-beta.7",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/react-native": "^0.62.10",
+    "babel-plugin-module-resolver": "^4.0.0",
     "bootstrap": "^4.4.1",
+    "closest": "^0.0.1",
+    "dagre": "^0.8.5",
+    "jquery": "^3.5.0",
+    "lodash": "^4.17.15",
+    "mathjs": "^6.6.5",
+    "pathfinding": "^0.4.18",
+    "paths-js": "^0.4.10",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.0",
+    "react-bootstrap": "^1.0.1",
+    "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-json-view": "^1.19.1",
+    "react-native": "^0.62.2",
+    "react-native-typescript-transformer": "^1.2.13",
+    "react-native-web": "^0.12.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.1",
+    "resize-observer-polyfill": "^1.5.1",
+    "typescript": "^3.8.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=2020 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -32,5 +60,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "babel-loader": "^8.1.0"
+  },
+  "proxy": "http://localhost:5000"
 }
