--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-web": "^0.12.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-tooltip": "^4.2.7",
     "resize-observer-polyfill": "^1.5.1",
     "typescript": "^3.8.3"
   },
