--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "mathjs": "^6.6.5",
     "pathfinding": "^0.4.18",
     "paths-js": "^0.4.10",
+    "rc-progress": "^3.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-data-table-component": "^6.9.6",
     "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
     "react-json-view": "^1.19.1",
@@ -39,6 +41,7 @@
     "react-scripts": "3.4.1",
     "react-tooltip": "^4.2.7",
     "resize-observer-polyfill": "^1.5.1",
+    "styled-components": "^5.1.1",
     "typescript": "^3.8.3"
   },
   "scripts": {
