--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "rc-progress": "^3.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-csv": "^2.0.3",
     "react-data-table-component": "^6.9.6",
     "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
