--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@emotion/core": "^10.0.28",
+    "@emotion/react": "^11.4.0",
     "@emotion/styled": "^10.0.27",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
@@ -22,22 +23,25 @@
     "bootstrap": "^4.4.1",
     "closest": "^0.0.1",
     "dagre": "^0.8.5",
+    "date-fns": "^2.22.1",
     "jquery": "^3.5.0",
     "lodash": "^4.17.15",
     "mathjs": "^6.6.5",
     "pathfinding": "^0.4.18",
     "paths-js": "^0.4.10",
     "rc-progress": "^3.0.0",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-bootstrap": "^1.0.1",
     "react-csv": "^2.0.3",
     "react-data-table-component": "^6.9.6",
+    "react-date-range": "^1.2.0",
     "react-datepicker": "^3.0.0",
+    "react-dates": "^21.8.0",
     "react-dom": "^16.13.1",
-    "react-json-view": "^1.19.1",
-    "react-native": "^0.62.2",
+    "react-json-view": "^1.21.3",
+    "react-native": "^0.64.2",
     "react-native-typescript-transformer": "^1.2.13",
-    "react-native-web": "^0.12.2",
+    "react-native-web": "^0.16.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-tooltip": "^4.2.7",
